--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,3 +1,3 @@
 <resources>
-    <style name="Theme.SomnathsRepresentative" parent="Theme.AppCompat.DayNight.NoActionBar" />
+    <style name="Theme.SomnathRepresentative" parent="Theme.AppCompat.DayNight.NoActionBar" />
 </resources>
